# bazel-issue-traniant-deps

./: .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE  babel.config.js  bazel  build-bazel-bar.sh  build-foo.sh  build-tsc-bar.sh  dependencies.yaml  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
bar/: BUILD.bazel  index.js  index.ts  package.json  tsconfig.json
build_tools/bazelfe/: common.sh  config  run_bazel_fe_jvm_indexer.sh
build_tools/dependencies/: update_dependencies.sh  update_dependencies_with_gradle_changes.sh
build_tools/external_tools/: BUILD.bazel  load_tool.bzl  pre_configured_tools.bzl  version_witness.bzl  wrap_executable.bzl
build_tools/ide_support/intellij/: account_view.bazelproject  base.bazelproject  default_view.bazelproject  engagement_view.bazelproject  full_view.bazelproject  growth_view.bazelproject
common/: common_js.bzl
foo/: BUILD.bazel  package.json  tsconfig.json
foo/lib/strings/: common.json  index.ts
